# wifiwavesdetection

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py  config.py  detection.py  main.py  models.py  runtime.py  signal.py
backend/data/: sample_wave.csv
backend/tests/: test_api.py  test_detection.py  test_signal.py
backend/wifiwaves_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/src/: App.css  App.jsx
